--- a/app/index.html
+++ b/app/index.html
@@ -16,18 +16,24 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
-
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-
-  <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
+  <div ng-controller="reportController as report">
+    <table class="mainTable">
+      <tr>
+        <th>name</th>
+        <th>video</th>
+        <th>cognitive</th>
+        <th>behavior</th>
+        <th>overall</th>
+      </tr>
+      <tr ng-repeat="row in report.rows">
+        <td>{{row.name}}</td>
+        <td>{{row.video}}</td>
+        <td>{{row.cognitive}}</td>
+        <td>{{row.behavior}}</td>
+        <td>{{row.overall}}</td>
+      </tr>
+    </table>
+  </div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -35,10 +41,5 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
 </body>
 </html>
