move table to the middle

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-  <div ng-controller="reportController as report">
+  <div class="root" ng-controller="reportController as report">
     <table class="mainTable">
       <tr>
         <th>name</th>
