style for participant detail table

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     </table>
 	<table class="table" ng-show="report.selectParticipantDetailTable">
       <tr>
-        <td>
+        <td style ="vertical-align:top">
           <table>
             <tr><td>Name</td></tr>
             <tr><td>{{report.selectParticipant.name}}</td></tr>
