--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>Report</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
@@ -24,7 +24,7 @@
 		<th>Overall</th>
       </tr>
       <tr ng-repeat="row in report.rows">
-		<td ng-click="report.selectParticipant(row.id)">{{row.name}}</td>
+		<td ng-click="report.showParticipantDetail(row.id)">{{row.name}}</td>
         <td ng-repeat="key in report.keys">{{row.scores[key].overall}}</td>
 		<td>{{row.overall}}</td>
       </tr>
