--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,10 @@
       </tr>
     </table>
   </div>
+  
+<div class="chart">
+
+</div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -69,5 +73,8 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="chart.js"></script>
+  
 </body>
 </html>
