--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
       </tr>
       <tr ng-repeat="row in report.rows">
 		<td ng-click="report.showParticipantDetail(row.id)">{{row.name}}</td>
-        <td ng-repeat="key in report.keys" ng-click="report.updateChart(row.scores[key].overall)">{{row.scores[key].overall}}</td>
+        <td ng-repeat="key in report.keys" ng-click="report.updateChart(row, key, 'overall')">{{row.scores[key].overall}}</td>
 		<td>{{row.overall}}</td>
       </tr>
     </table>
@@ -68,15 +68,13 @@
 	<div class="background" ></div>
 	<div class="score-range" ></div>
 	<div class="min-text" ></div>
-	<div class="min-num" ></div>
 	<div class="avg-bar" ></div>
 	<div class="avg-text" ></div>
-	<div class="avg-num" ></div>
+	<div class="avg-text" ></div>
 	<div class="score-bar" ></div>
 	<div class="score-text" ></div>
 	<div class="score-num" ></div>
 	<div class="max-text" ></div>
-	<div class="max-num" ></div>
 </div>
 
   <!-- In production use:
@@ -87,6 +85,7 @@
   <script src="app.js"></script>
   <script src="lib/d3.min.js" charset="utf-8"></script>
   <script src="chart.js"></script>
+  <script src="data.js"></script>
   
 </body>
 </html>
