--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,9 @@
 	<div class="score-text" ></div>
 	<div class="max-text" ></div>
 </div>
+<div class="curve-chart">
+	
+</div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -89,6 +92,7 @@
   <script src="app.js"></script>
   <script src="lib/d3.min.js" charset="utf-8"></script>
   <script src="chart.js"></script>
+  <script src="curve-chart.js"></script>
   <script src="data.js"></script>
   
 </body>
