--- a/app/bell-curve.html
+++ b/app/bell-curve.html
@@ -82,7 +82,7 @@ x.domain(d3.extent(data, function(d) {
 y.domain(d3.extent(data, function(d) {
     return d.p;
 }));
-/*
+
 svg.append("g")
     .attr("class", "x axis")
     .attr("transform", "translate(0," + height + ")")
@@ -91,7 +91,7 @@ svg.append("g")
 svg.append("g")
     .attr("class", "y axis")
     .call(yAxis);
-*/
+
 svg.append("path")
     .datum(data)
     .attr("class", "line")
@@ -115,6 +115,7 @@ for (var i = 0; i < 100000; i++) {
 //https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/sort
 data.sort(function(x, y) {
     return x.q - y.q;
+    return x.q - y.q;
 });	
 }
 
@@ -130,15 +131,15 @@ function normal() {
         rds = x * x + y * y;
     } while (rds == 0 || rds > 1);
     c = Math.sqrt(-2 * Math.log(rds) / rds); // Box-Muller transform
-    return x * c; // throw away extra sample y * c
+    return x * c*12.5+50; // throw away extra sample y * c
 }
 
 //taken from Jason Davies science library
 // https://github.com/jasondavies/science.js/
 function gaussian(x) {
 	var gaussianConstant = 1 / Math.sqrt(2 * Math.PI),
-		mean = 0,
-    	sigma = 1;
+		mean = 50,
+    	sigma = 12.5;
 
     x = (x - mean) / sigma;
     return gaussianConstant * Math.exp(-.5 * x * x) / sigma;
