--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
 			<g class="x axis"></g>
 			<g class="y axis"></g>
 			<path class="line"></path>
+			<g class="column"></g>
 		</g>
 	</svg>
 </div>
