four score bars available
four score bars available

--- a/app/index.html
+++ b/app/index.html
@@ -83,11 +83,11 @@
 </div>
 <div class="curve-chart">
 	<svg>
-		<g>
+		<g class ="bell-curve">
 			<g class="x axis"></g>
 			<g class="y axis"></g>
 			<path class="line"></path>
-			<g class="column"></g>
+			<g id="score"></g>
 		</g>
 	</svg>
 </div>
