--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
 			<g class="y axis"></g>
 			<path class="line"></path>
 			<g id="score"></g>
+      <g id ="legend"></g>
 		</g>
 	</svg>
 </div>
