--- a/mapping/index.html
+++ b/mapping/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> 
-<html lang="en" ng-app="report" class="no-js"> <!--<![endif]-->
+<html lang="en" ng-app="mapping" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,14 +12,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
-  <link rel="stylesheet" href="app.css">
-	<link rel="stylesheet" href="chart.css">
-	<link rel="stylesheet" href="curve-chart.css">
+    <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script>
+
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+  <script src="mapping.js"></script>
 </head>
 <body>
 
   <div class="root" ng-controller="mappingController as mapping">
+        <div>
+      <label>Name:</label>
+      <input type="text" ng-model="d" placeholder="Enter a name here">
+      <hr>
+      <h1>Hello {{d}}!</h1>
+    </div>
   </div>
 
 
