--- a/mapping/index.html
+++ b/mapping/index.html
@@ -23,9 +23,9 @@
   <div class="root" ng-controller="mappingController as mapping">
         <div>
       <label>Name:</label>
-      <input type="text" ng-model="d" placeholder="Enter a name here">
+      <input type="text" ng-model="mapping.nodeGroupName" placeholder="Enter a Node Group Name here">
       <hr>
-      <h1>Hello {{d}}!</h1>
+      <h1>Hello {{mapping.nodeGroupName}}!</h1>
     </div>
   </div>
 
