--- a/mapping/index.html
+++ b/mapping/index.html
@@ -45,35 +45,35 @@
       <form ng-submit="mapping.addNode()">
         <div>
         <label>Name:</label>
-        <input class="input-box node-value" type="text" ng-model="mapping.node.nodeName" ng-change="mapping.updateCode()" placeholder="Enter a node name here">
+        <input class="input-box node-value" type="text" ng-model="mapping.node.name" ng-change="mapping.updateCode()" placeholder="Enter a node name here">
         <label>Code:</label>
-        <input class="input-box node-value" type="text" ng-model="mapping.node.nodeCode" placeholder="Enter a node code here">
+        <input class="input-box node-value" type="text" ng-model="mapping.node.code" placeholder="Enter a node code here">
         </div>
         <div>
         <label>Type:</label>
-        <select class="input-select node-option" ng-model="mapping.node.nodeType">
+        <select class="input-select node-option" ng-model="mapping.node.type" ng-change="mapping.updatePossibleParentNodes()">
           <option value="Domain">Domain</option>
           <option value="Cluster">Cluster</option>
           <option value="Competency">Competency</option>
         </select>
         <label>Order:</label>
-        <select class="input-select node-option" ng-model="mapping.node.nodeOrder" ng-options="number for number in mapping.orders">
+        <select class="input-select node-option" ng-model="mapping.node.order" ng-options="number for number in mapping.orders">
         </select>
         <label>Parent Node:</label>
-        <select class="input-select node-option" ng-model="mapping.node.parentNode" ng-disabled="mapping.node.nodeType=='Domain'||mapping.node.nodeType==null" ng-options="node.name for node in mapping.nodes">
+        <select class="input-select node-option" ng-model="mapping.node.parentNode" ng-disabled="mapping.possibleParentNodes.length==0" ng-options="node.name for node in mapping.possibleParentNodes">
         </select>
         <label>Rank:</label>
-        <select class="input-select node-option" ng-model="mapping.node.nodeRank" ng-disabled="mapping.parentNode==null">
+        <select class="input-select node-option" ng-model="mapping.node.rank" ng-disabled="mapping.parentNode==null">
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
         </select>
         <label>Weight:</label>
-        <input class="input-box node-value" type="text" ng-model="mapping.node.nodeWeight" placeholder="Enter a node weight here" ng-disabled="mapping.nodeRank==null">
+        <input class="input-box node-value" type="text" ng-model="mapping.node.weight" placeholder="Enter a node weight here" ng-disabled="mapping.nodeRank==null">
         </div>
         <div>
         <label>Description:</label>
-          <textarea rows="4" cols="50" ng-model="mapping.node.nodeDescription" placeholder="Enter a node description here"></textarea>
+          <textarea rows="4" cols="50" ng-model="mapping.node.description" placeholder="Enter a node description here"></textarea>
       </div>
         <input type="submit" value="add">
       </form>
