--- a/mapping/index.html
+++ b/mapping/index.html
@@ -60,7 +60,7 @@
         <select class="input-select node-option" ng-model="mapping.node.order" ng-options="number for number in mapping.orders">
         </select>
         <label>Parent Node:</label>
-        <select class="input-select node-option" ng-model="mapping.node.parentNode" ng-disabled="mapping.possibleParentNodes.length==0" ng-options="node.name for node in mapping.possibleParentNodes">
+        <select class="input-select node-option" ng-model="mapping.node.parentNode" ng-change="mapping.updatePossibleRank()" ng-disabled="mapping.possibleParentNodes.length==0" ng-options="node.name for node in mapping.possibleParentNodes">
         </select>
         <label>Rank:</label>
         <select class="input-select node-option" ng-model="mapping.node.rank" ng-disabled="mapping.parentNode==null">
