--- a/mapping/index.html
+++ b/mapping/index.html
@@ -29,6 +29,12 @@
       <div>
       <label>Nodes:</label>
       <br />
+      <table class ="node-table">
+        <tr><td>Name</td><td>Code</td><td>Type</td><td>Order</td><td>Parent Node</td><td>Rank</td><td>Weight</td><td>Descirption</td><td>Action</td></tr>
+        <tr ng-repeat="node in mapping.nodes">
+          <td>{{node.name}}</td><td>{{node.code}}</td><td>{{node.type}}</td><td>{{node.order}}</td><td>{{node.parentNode.name}}</td><td>{{node.rank}}</td><td>{{node.weight}}</td><td>{{node.description}}</td><td>Delete</td>
+        </tr>
+      </table>
       <ol class="unstyled">
         <li ng-repeat="node in mapping.nodes">
           <span>{{node.name}}</span>
@@ -52,18 +58,22 @@
         <div>
         <label>Type:</label>
         <select class="input-select node-option" ng-model="mapping.node.type" ng-change="mapping.updatePossibleParentNodes()">
+          <option value="">-- choose node type --</option>
           <option value="Domain">Domain</option>
           <option value="Cluster">Cluster</option>
           <option value="Competency">Competency</option>
         </select>
         <label>Order:</label>
         <select class="input-select node-option" ng-model="mapping.node.order" ng-options="number for number in mapping.orders">
+          <option value="">-- choose order --</option>
         </select>
         <label>Parent Node:</label>
         <select class="input-select node-option" ng-model="mapping.node.parentNode" ng-change="mapping.updatePossibleRank()" ng-disabled="mapping.possibleParentNodes.length==0" ng-options="node.name for node in mapping.possibleParentNodes">
+          <option value="">-- choose parent node --</option>
         </select>
         <label>Rank:</label>
         <select class="input-select node-option" ng-model="mapping.node.rank" ng-disabled="mapping.possibleRank.length==0" ng-options="number for number in mapping.possibleRank">
+          <option value="">-- choose rank --</option>
         </select>
         <label>Weight:</label>
         <input class="input-box node-value" type="text" ng-model="mapping.node.weight" placeholder="Enter a node weight here" ng-disabled="mapping.node.rank==null">
